--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -4,7 +4,9 @@
   justify-content: center;
   align-items: center;
 }
-
+.login-container img {
+  margin: 0 auto;
+}
 .login-container form {
   width: 100%;
   max-width: 300px;
@@ -22,6 +24,15 @@
   color: #666;
 }
 
+.login-container span {
+  color: #95a5a6;
+}
+
+.login-container h2 {
+  color: #7f8c8d;
+  margin: 0 auto;
+}
+
 .login-container form input::placeholder {
   color: #999;
 }
@@ -32,7 +43,7 @@
   border-radius: 4px;
   height: 48px;
   font-size: 16px;
-  background: #DF4723;
+  background: #27ae60;
   font-weight: bold;
   color: #FFF;
   cursor: pointer;
